Upgrade to version 1.21.1